# tree-sitter-sdbl

./: Cargo.toml  LICENSE  Makefile  README.md  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml
bindings/c/: tree-sitter-sdbl.h  tree-sitter-sdbl.pc.in
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sdbl/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterSdblTests/: TreeSitterSdblTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: casting.txt  comment.txt  cyrylic.txt  expressions.txt  functions.txt  group_by.txt  invocations.txt  literals.txt  queries.txt  refernces.txt  select.txt  subquery.txt  versions.txt
