[package]
name = "tree-sitter-your-sdbl"
description = "Grammar parser for 1C:Enterprise query language (sdbl)"
version = "0.1.0"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "sdbl", "1C"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/prykhodev/tree-sitter-your-sdbl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.0.87"
